@startuml Strategy_Pattern
scale 2
!theme plain
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam defaultFontName "Microsoft YaHei"
skinparam nodesep 40
skinparam ranksep 45
caption v2.2.0 · 2026-09-07

title Strategy Pattern — Compression & Encryption Modules

together {
    abstract class ICompression {
        + compress(input, metadataOut, output) : void
        + decompress(metadata, input, output, originalSize) : void
    }
    abstract class IEncryption {
        + encrypt(input, output) : void
        + decrypt(input, output) : void
    }
}

together {
    class NullCompression {
        + NULL_COMPRESSION_MARKER = 0x00
        + compress(..) / decompress(..) 「直通」
    }
    class NullEncryption {
        + encrypt(..) / decrypt(..) 「直通」
    }
}

together {
    class HuffmanCompression {
        - huffman : unique_ptr~Huffman~
        + HuffmanCompression()
        + compress(input, metadataOut, output)
        + decompress(metadata, input, output, originalSize)
    }
    class AesEncryption {
        - aes : Aes 「值持有」
        + AesEncryption(password)
        + encrypt(..) / decrypt(..)
    }
}

class Aes {
    - w[44] 轮密钥 / iv[16]
    - aesKey16Bytes[16]
    - cryptProvider : HCRYPTPROV 「实例缓存」
    + doAes(mode, input, output)
    - processDataAes / hashTo16Bytes
    - 轮函数组 (构造后只读)
}

class StrategyFactory {
    + {static} createModules(mode, password) : StrategyModules
    + {static} idToMode(id) : CompressionMode
    + {static} modeToId(mode) : CompressStrategy
    + {static} hasEncryption(mode) : bool
}

class StrategyModules {
    + compression : unique_ptr~ICompression~
    + encryption : unique_ptr~IEncryption~
}

ICompression <|-- NullCompression
ICompression <|-- HuffmanCompression
IEncryption <|-- NullEncryption
IEncryption <|-- AesEncryption

HuffmanCompression *--> Huffman
AesEncryption *--> Aes

StrategyFactory ..> StrategyModules : <<creates>>
StrategyModules *--> ICompression
StrategyModules *--> IEncryption

note right of StrategyFactory
  CompressionMode:
  HuffmanAES=0, HuffmanOnly=1,
  AESOnly=2, PackOnly=3
  —— idToMode 用于解压端
  从归档头探测策略
end note

note bottom of StrategyModules
  v2.2.0: createModules 不再由 GUI 一次性创建共享实例,
  而是流水线读线程与每个工人各自创建私有模块
  (AES 轮密钥/Huffman 树均为可变状态,不可共享)
end note

@enduml
